--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Devel::SlowBless.
 
+0.04  Tue Feb 8
+    - Removed 5.8.9 requirement.
+    - Added () around Carp::cluck call.
+
 0.02  Thu Jan 13 10:26:00 2010
     - Fixed unit test to work for 5.8 and 5.10.
 
