--- a/README
+++ b/README
@@ -1,10 +1,11 @@
-Devel-SlowBless version 0.04
+Devel-SlowBless version 0.05
 ============================
 
 This module provides functions to introspect the current value of the
 PL_sub_generation and the PL_amagic_generation internal perl variables,
 as well as a perl debugger implementation that will print out a stack
-trace whenever either of these variables changes.
+trace whenever either of these variables changes.  As of Perl 5.17.1,
+PL_amagic_generation is no longer used, and the value is always 0.
 
 Whenever either of these variables changes, the bless() function slows
 down as perl examines the entire class heirarchy recomputing the overloads
